Get rpm installations functional again.

--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
@@ -125,6 +125,8 @@
     register: g_rpm_versions_result
     when: not openshift.common.is_containerized | bool
 
+  - debug: var=g_rpm_versions_result
+
   - set_fact:
       g_aos_versions: "{{ g_rpm_versions_result.stdout | from_yaml }}"
     when: not openshift.common.is_containerized | bool
