--- a/roles/openshift_ca/tasks/main.yml
+++ b/roles/openshift_ca/tasks/main.yml
@@ -4,10 +4,7 @@
   when: openshift_ca_host is not defined
 
 - name: Install the base package for admin tooling
-  action: >
-    {{ ansible_pkg_mgr }}
-    name={{ openshift.common.service_type }}{{ openshift_version  }}
-    state=present
+  action: "{{ ansible_pkg_mgr }} name={{ openshift.common.service_type }}{{ openshift_version | default('') | oo_image_tag_to_rpm_version(include_dash=True) }} state=present"
   when: not openshift.common.is_containerized | bool
   register: install_result
   delegate_to: "{{ openshift_ca_host }}"
