--- a/roles/openshift_docker/tasks/main.yml
+++ b/roles/openshift_docker/tasks/main.yml
@@ -29,7 +29,7 @@
     openshift_version: "{{ openshift.common.version }}"
   when: openshift.common.version is defined and openshift_version is not defined
 
-- name: Lookup latest OpenShift rpm version if none specified
+- name: Install latest OpenShift rpm to check version
   action: "{{ ansible_pkg_mgr }} name={{ openshift.common.service_type }}{{ openshift_version | default('') | oo_image_tag_to_rpm_version(include_dash=True) }} state=present"
   when: not is_containerized | bool and openshift_version is not defined
 
