--- a/roles/openshift_version/meta/main.yml
+++ b/roles/openshift_version/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
-  author: Jason DeTiberus
-  description: OpenShift Docker
+  author: Devan Goodwin
+  description: Determines the version of OpenShift to install or upgrade to
   company: Red Hat, Inc.
   license: Apache License, Version 2.0
   min_ansible_version: 1.9
