Add flag to manage htpasswd, or not.
Setting `openshift_master_manage_htpasswd` falsy will disable managing
the htpasswd file. It won't get overwritten/generated.

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -93,7 +93,7 @@
     src: htpasswd.j2
     mode: 0600
     backup: yes
-  when: item.kind == 'HTPasswdPasswordIdentityProvider'
+  when: item.kind == 'HTPasswdPasswordIdentityProvider' and openshift.master.manage_htpasswd | bool
   with_items: "{{ openshift.master.identity_providers }}"
 
 - name: Create the ldap ca file if needed
