--- a/roles/openshift_hosted_facts/tasks/main.yml
+++ b/roles/openshift_hosted_facts/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- set_fact:
+    openshift_hosted_router_selector: "{{ openshift_hosted_infra_selector }}"
+  when: openshift_hosted_router_selector is not defined and openshift_hosted_infra_selector is defined
+- set_fact:
+    openshift_hosted_registry_selector: "{{ openshift_hosted_infra_selector }}"
+  when: openshift_hosted_registry_selector is not defined and openshift_hosted_infra_selector is defined
+- set_fact:
+    openshift_hosted_logging_selector: "{{ openshift_hosted_infra_selector }}"
+  when: openshift_hosted_logging_selector is not defined and openshift_hosted_infra_selector is defined
+- set_fact:
+    openshift_hosted_metrics_selector: "{{ openshift_hosted_infra_selector }}"
+  when: openshift_hosted_metrics_selector is not defined and openshift_hosted_infra_selector is defined
+
 - name: Set hosted facts
   openshift_facts:
     role: hosted
