--- a/roles/openshift_hosted/tasks/router.yml
+++ b/roles/openshift_hosted/tasks/router.yml
@@ -25,41 +25,41 @@
     content: "{{ openshift.hosted.router.certificate.contents }}"
     dest: "{{ openshift_master_config_dir }}/openshift-router.pem"
     mode: 0600
-  when: openshift.hosted.router.certificate | default(None) != None
+  when: openshift.hosted.router.certificate | default(none) is not none
 
 - name: Retrieve list of openshift nodes
   command: >
     {{ openshift.common.client_binary }} --api-version='v1' -o json
-    get nodes -n default --config={{ openshift.common.config_base }}/master/admin.kubeconfig
+    get nodes -n default --config={{ openshift_hosted_kubeconfig }}
+    --selector={{ openshift.hosted.router.selector | default('') }}
   register: openshift_hosted_router_nodes_json
   changed_when: false
-  when: openshift.hosted.router.replicas | default(None) == None
+  when: openshift.hosted.router.replicas | default(none) is none
 
-- name: Collect nodes matching router selector
-  set_fact:
-    openshift_hosted_router_nodes: >
-      {{ (openshift_hosted_router_nodes_json.stdout|from_json)['items']
-         | oo_oc_nodes_matching_selector(openshift.hosted.router.selector) }}
-  when: openshift.hosted.router.replicas | default(None) == None
+- set_fact:
+    replicas: "{{ openshift.hosted.router.replicas | default((openshift_hosted_router_nodes_json.stdout | from_json)['items'] | length) }}"
 
 - name: Create OpenShift router
   command: >
     {{ openshift.common.admin_binary }} router --create
-    {% if openshift.hosted.router.replicas | default(None) != None -%}
-    --replicas={{ openshift.hosted.router.replicas }}
-    {% else -%}
-    --replicas={{ openshift_hosted_router_nodes | length }}
-    {% endif %}
-    {% if openshift.hosted.router.certificate | default(None) != None -%}
+    --config={{ openshift_hosted_kubeconfig }}
+    {% if replicas > 1 -%}
+    --replicas={{ replicas }}
+    {% endif -%}
+    {% if openshift.hosted.router.certificate | default(none) is not none -%}
     --default-cert={{ openshift_master_config_dir }}/openshift-router.pem
     {% endif -%}
-    --namespace=default
+    --namespace={{ openshift.hosted.router.namespace | default('default') }}
     --service-account=router
+    {% if openshift.hosted.router.selector | default(none) is not none -%}
     --selector='{{ openshift.hosted.router.selector }}'
+    {% endif -%}
+    {% if not openshift.common.version_gte_3_2_or_1_2 | bool -%}
     --credentials={{ openshift_master_config_dir }}/openshift-router.kubeconfig
-    {% if openshift.hosted.router.registryurl | default(None)!= None -%}
+    {% endif -%}
+    {% if openshift.hosted.router.registryurl | default(none) is not none -%}
     --images='{{ openshift.hosted.router.registryurl }}'
     {% endif -%}
   register: openshift_hosted_router_results
   changed_when: "'service exists' not in openshift_hosted_router_results.stdout"
-  when: openshift.hosted.router.replicas | default(None) != None or (openshift_hosted_router_nodes is defined and openshift_hosted_router_nodes | length > 0)
+  failed_when: "openshift_hosted_router_results.rc != 0 and 'service exists' not in openshift_hosted_router_results.stdout and 'deployment_config' not in openshift_hosted_router_results.stderr and 'service' not in openshift_hosted_router_results.stderr"
