--- a/playbooks/common/openshift-cluster/openshift_hosted.yml
+++ b/playbooks/common/openshift-cluster/openshift_hosted.yml
@@ -1,8 +1,15 @@
-- name: Create persistent volumes and create hosted services
+- name: Create persistent volumes
   hosts: oo_first_master
   vars:
     persistent_volumes: "{{ hostvars[groups.oo_first_master.0] | oo_persistent_volumes(groups) }}"
     persistent_volume_claims: "{{ hostvars[groups.oo_first_master.0] | oo_persistent_volume_claims }}"
+  roles:
+  - role: openshift_persistent_volumes
+    when: persistent_volumes | length > 0 or persistent_volume_claims | length > 0
+
+- name: Create Hosted Resources
+  hosts: oo_first_master
+  vars:
     l_projects:
       default:
         default_node_selector: "{{ openshift_hosted_router_selector
@@ -16,33 +23,10 @@
         default_node_selector: "{{ openshift_hosted_logging_selector
                                    | default(openshift_hosted_infra_selector
                                              | default(omit)) }}"
-  roles:
-  - role: openshift_persistent_volumes
-    when: persistent_volumes | length > 0 or persistent_volume_claims | length > 0
-  - role: openshift_projects
-    openshift_projects: "{{ openshift_additional_projects | default({}) | oo_merge_dicts(l_projects) }}"
-  - role: openshift_serviceaccounts
-    openshift_serviceaccounts_names:
-    - router
-    openshift_serviceaccounts_namespace: default
-    openshift_serviceaccounts_sccs:
-    - hostnetwork
-    when: openshift.common.version_gte_3_2_or_1_2
-  - role: openshift_serviceaccounts
-    openshift_serviceaccounts_names:
-    - router
-    - registry
-    openshift_serviceaccounts_namespace: default
-    openshift_serviceaccounts_sccs:
-    - privileged
-    when: not openshift.common.version_gte_3_2_or_1_2
-  - role: openshift_metrics
-    when: openshift.hosted.metrics.deploy | bool
-
-- name: Create Hosted Resources
-  hosts: oo_first_master
   pre_tasks:
   - set_fact:
+      openshift_hosted_router_registryurl: "{{ hostvars[groups.oo_first_master.0].openshift.master.registry_url }}"
       openshift_hosted_registry_registryurl: "{{ hostvars[groups.oo_first_master.0].openshift.master.registry_url }}"
   roles:
   - role: openshift_hosted
+    openshift_projects: "{{ openshift_additional_projects | default({}) | oo_merge_dicts(l_projects) }}"
