--- a/playbooks/byo/openshift-cluster/config.yml
+++ b/playbooks/byo/openshift-cluster/config.yml
@@ -11,6 +11,7 @@
       name: "{{ item }}"
       groups: l_oo_all_hosts
     with_items: g_all_hosts
+    changed_when: false
 
 - hosts: l_oo_all_hosts
   gather_facts: no
