--- a/playbooks/common/openshift-cluster/evaluate_groups.yml
+++ b/playbooks/common/openshift-cluster/evaluate_groups.yml
@@ -36,6 +36,7 @@
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
       ansible_become: "{{ g_sudo | default(omit) }}"
     with_items: g_all_hosts | default([])
+    changed_when: false
 
   - name: Evaluate oo_masters
     add_host:
@@ -44,6 +45,7 @@
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
       ansible_become: "{{ g_sudo | default(omit) }}"
     with_items: "{{ g_master_hosts | union(g_new_master_hosts) | default([]) }}"
+    changed_when: false
 
   - name: Evaluate oo_etcd_to_config
     add_host:
@@ -52,6 +54,7 @@
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
       ansible_become: "{{ g_sudo | default(omit) }}"
     with_items: "{{ g_etcd_hosts | default([]) }}"
+    changed_when: false
 
   - name: Evaluate oo_masters_to_config
     add_host:
@@ -60,6 +63,7 @@
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
       ansible_become: "{{ g_sudo | default(omit) }}"
     with_items: "{{ g_new_master_hosts | default(g_master_hosts | default([], true), true) }}"
+    changed_when: false
 
   - name: Evaluate oo_nodes_to_config
     add_host:
@@ -68,6 +72,7 @@
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
       ansible_become: "{{ g_sudo | default(omit) }}"
     with_items: "{{ g_new_node_hosts | default(g_node_hosts | default([], true), true) }}"
+    changed_when: false
 
   # Skip adding the master to oo_nodes_to_config when g_new_node_hosts is
   - name: Evaluate oo_nodes_to_config
@@ -78,6 +83,7 @@
       ansible_become: "{{ g_sudo | default(omit) }}"
     with_items: "{{ g_master_hosts | default([]) }}"
     when: g_nodeonmaster | default(false) == true and g_new_node_hosts is not defined
+    changed_when: false
 
   - name: Evaluate oo_first_etcd
     add_host:
@@ -85,6 +91,7 @@
       groups: oo_first_etcd
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
     when: g_etcd_hosts|length > 0
+    changed_when: false
 
   - name: Evaluate oo_first_master
     add_host:
@@ -93,6 +100,7 @@
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
       ansible_become: "{{ g_sudo | default(omit) }}"
     when: g_master_hosts|length > 0
+    changed_when: false
 
   - name: Evaluate oo_lb_to_config
     add_host:
@@ -101,6 +109,7 @@
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
       ansible_become: "{{ g_sudo | default(omit) }}"
     with_items: "{{ g_lb_hosts | default([]) }}"
+    changed_when: false
 
   - name: Evaluate oo_nfs_to_config
     add_host:
@@ -109,3 +118,4 @@
       ansible_ssh_user: "{{ g_ssh_user | default(omit) }}"
       ansible_become: "{{ g_sudo | default(omit) }}"
     with_items: "{{ g_nfs_hosts | default([]) }}"
+    changed_when: false
